Add class project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Matheus Mota</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/index.css">
+</head>
+
+<body>
+
+    <header>
+            <img src="assets/img/logo.png" alt="Arrow logo">
+            <nav>
+                <a href="" lang="en">Skills</a>
+                <a href="">Project</a>
+                <a href="">About me</a>
+                <a href="">Contact</a>
+                <a id="button" href="" lang="en">Download CV</a>
+            </nav>
+    </header>
+    
+</body>
+</html>
