create the title component

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/components/title.css">
 </head>
 
 <body>
@@ -18,12 +20,23 @@
             <img src="assets/img/logo.png" alt="Arrow logo">
             <nav>
                 <a href="" lang="en">Skills</a>
-                <a href="">Project</a>
-                <a href="">About me</a>
-                <a href="">Contact</a>
+                <a href="" lang="en">Project</a>
+                <a href="" lang="en">About me</a>
+                <a href=""lang="en">Contact</a>
                 <a id="button" href="" lang="en">Download CV</a>
             </nav>
     </header>
-    
+
+
+    <div class="imagem" style="background: url(assets/img/arte\ figma.jpg);">
+        
+        <div class="texto">
+            <h1>Matheus Mota</h1>
+            <h3>Student</h3>
+        </div>
+
+            <a class="botao1" href="" lang="en">Download CV</a>
+            <a class="botao2" href="" lang="en">Contact</a> 
+    </div>
 </body>
 </html>
